Create linux goal in prod-maven-plugin
How to configure this goal?
You have to provide necessary configuration in your pom.xml, all required
filed can be found in prod-maven-plugin module under the LinuxBuild Mojo.

Execute mvn prod:linux to build installer for linux.